# Linux-lessons

./: .gitignore  CMakeLists.txt  README.me
Homework_1/: usage_of_random_utilities.cpp
Homework_2/: CMakeLists.txt
Homework_3/: CMakeLists.txt
Homework_4/: CMakeLists.txt  producer-consumer-shmgt.cpp  source.h
Homework_6/: CMakeLists.txt  chat.cpp
Pipe-FIFO/: CMakeLists.txt  pipe.cpp  reader.cpp  writer.cpp
Sigaction/: signal.c
Tic-Tac-Toe/: CMakeLists.txt  Tic-Tac-Toe.cpp  Tic-Tac-Toe.h  main.cpp
homework_1/: CMakeLists.txt
homework_2/: reader_writer_problem.cpp
homework_3/: signal_handle.cpp
produces_consumer/: CMakeLists.txt  producer_consumer_problem.cpp
shm/shm/: shm.c
shm/shm_2/: shm_1.c  shm_2.c
shm/shm_mutex/: CMakeLists.txt  main.c
shm/shm_mutex/lock/: lock.c
sigaction/: sigaction_0.c
sigactions/: CMakeLists.txt  sigaction_1.c
udp/: CMakeLists.txt  udp_client.c  udp_server.c
