cmake_minimum_required(VERSION 3.30)
project(Linux_lessons)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(Homework_1)

add_subdirectory(Producer-consumer)

add_subdirectory(Homework_2)

add_subdirectory(Sigaction)

add_subdirectory(Homework_3)

add_subdirectory(Pipe-FIFO)

add_subdirectory(Homework_4)

add_subdirectory(udp)